<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imagenPerfil"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="16dp"
        android:scaleType="centerCrop"
        android:background="@drawable/imagenperfil"
        android:src="@drawable/applogo"/>

    <TextView
        android:id="@+id/mosrarUsuarioPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_usuario"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/mostrarEmailPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_usuario_com"
        android:textSize="16sp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monedas_en_posesi_n"
        android:textSize="18sp"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/mostrarMonedasPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monedas_gastadas"
        android:textSize="18sp"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/monedasGastadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tareas_completadas"
        android:textSize="18sp"
        android:layout_marginBottom="4dp" />

    <TextView
        android:id="@+id/tareascompletadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />

</LinearLayout>
