<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/fondo"
    tools:context=".CrearPremioActivity">

    <com.example.lifequest.MenuSuperiorActivity
        android:id="@+id/menuSuperior"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:padding="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuSuperior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                style="@style/menuRosa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/anadir_premio"
                android:textAlignment="center"
                android:textSize="34sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_weight="0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/anadirPremio"
                app:backgroundTint="@null"
                style="@style/botonRosa"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="@string/anadir"
                android:textSize="20sp"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/atrasPremio"
                style="@style/botonRosa"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:text="@string/atras"
                android:textSize="20sp"
                app:backgroundTint="@null" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:layout_weight="0" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbarSize="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/datos_basicos"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/nombrePremio"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:hint="@string/nombre_del_premio" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        style="@style/texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/precio"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <SeekBar
                        android:id="@+id/barraPremio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="100"
                        android:progress="0"
                        android:progressBackgroundTint="#8C8C8C"
                        android:progressTint="@color/naranja"
                        android:thumbTint="@color/naranja" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/cantidadMonedas"
                            android:layout_width="220dp"
                            android:layout_height="48dp"
                            android:gravity="center"
                            android:inputType="number"
                            android:text="0"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/monedas"
                            android:textSize="20sp" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>